--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,20 @@ header a{
     flex-direction: column;
     align-items: center;
 }
+@media screen and (max-width: 480px){
+    header{
+
+    }
+    .logo{
+        font-size: 24px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .logo svg{
+        width: 48px;
+    }
+    .links{
+        gap: 25px;
+    }
+}
